--- a/activar/index.html
+++ b/activar/index.html
@@ -55,6 +55,7 @@
                             <li><a href="./gallery.html">Phòng chống</a></li>
                             <li><a href="./blog.html">Liên hệ</a>
                             <li><a href="#">NANI KORE</a></li>
+                            <li><a href="#">Coronako nguy hiểm</a></li>
                                 <ul class="dropdown">
                                     <li><a href="./about-us.html">About Us</a></li>
                                     <li><a href="./blog-single.html">Blog Details</a></li>
