--- a/activar/index.html
+++ b/activar/index.html
@@ -756,6 +756,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/masonry.pkgd.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/api.js"></script>
 </body>
 
 </html>
