--- a/activar/index.html
+++ b/activar/index.html
@@ -85,13 +85,13 @@
                     </div>
                 </div>
             </div>
-            <div class="single-hero-item set-bg" data-setbg="img/hero-slider/hero-2.jpg">
+            <div class="single-hero-item set-bg" data-setbg="img/unnamed.png">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="hero-text">
-                                <h2>Join Us Now</h2>
-                                <h1>FITNESS & SPORT</h1>
+                                <h2 style="color:black;">Cơ sở vật chất, thiết bị phòng chống</h2>
+                                <h1>Covid-19</h1>
                                 <a href="#" class="primary-btn">Read More</a>
                             </div>
                         </div>
@@ -114,7 +114,13 @@
         </div>
     </section>
     <!-- Hero End -->
-
+<div id="Corona_prevent_video_container">
+    
+      <iframe class="video_child" src='https://www.vlive.tv/embed/180468?autoPlay=true' frameborder='no' scrolling='no' marginwidth='0' marginheight='0' allowfullscreen></iframe>
+      <iframe class="video_child" src='https://www.vlive.tv/embed/180320?autoPlay=true' frameborder='no' scrolling='no' marginwidth='0' marginheight='0'  allowfullscreen></iframe>
+      <iframe class="video_child" src='https://www.vlive.tv/embed/180803?autoPlay=true' frameborder='no' scrolling='no' marginwidth='0' marginheight='0'  allowfullscreen></iframe>
+</div>
+   
     <!-- Feature Section Begin -->
     <section class="feature-section">
         <div class="container-fluid">
@@ -177,7 +183,7 @@
                 <div class="row">
                     <div class="col-lg-7 m-auto text-center">
                         <div class="section-title pl-lg-4 pr-lg-4 pl-0 pr-0">
-                            <h2>Choose Your Program</h2>
+                            <h2>Dịch Vụ</h2>
                             <p>Our Crossfit experts can help you discover new training techniques and exercises that offer a dynamic and efficient full-body workout.</p>
                         </div>
                     </div>
@@ -630,7 +636,7 @@
     <!-- Cta Section End -->
 
     <!-- Map Section Begin -->
-    <div class="map">
+    <!-- <div class="map">
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d188618.51311104256!2d-71.236572!3d42.381647!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1576756626784!5m2!1sen!2sbd" height="590" style="border: 0" allowfullscreen=""></iframe>
         <div class="map-contact-detalis">
@@ -652,7 +658,7 @@
                 </form>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Map Section End -->
 
     <!-- Footer Section Begin -->
@@ -666,8 +672,7 @@
                             <a href="#"><img src="" alt=""></a> 
                             <!-- LOGO -->
                         </div>
-                        <p>Chúng tôi tự tin khẳng định trang web của mình luôn được cập nhật 
-                        những thông tin chính xác nhất nên hãy cứ thoải mái tìm hiểu thông tin có ích nhé!</p>
+                        <p>Chúng tôi xin cam kết sẽ đem lại những thông tin chính xác nhất và được cập nhật liên tục về dịch bệnh SARS-COV-2 trên Việt Nam và toàn thế giới.</p>
                         <div class="social-links">
                             <h6>Follow us</h6>
                             <a href="#"><i class="fa fa-facebook"></i></a>
@@ -738,7 +743,7 @@
                 <div class="row">
                     <div class="col-lg-12 text-center">
                         <div class="ct-inside"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved </div>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved| <a href="https://colorlib.com/wp/templates/">Made with Colorlib</a> </div>
                     </div>
                 </div>
             </div>
