--- a/activar/test3.html
+++ b/activar/test3.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/test.css" type="text/css">
 </head>
 
 <body>
@@ -73,15 +74,120 @@
     <section class="aboutus-section spad">
         <div class="container">
             <div class="aboutus-page-text">
-                    <div class="row">
-                        <div class="col-xl-9 col-lg-10 m-auto">
+                <div class="row bg-red">
+                    <div class="col-xl-9 col-lg-10 m-auto">
                         <div class="section-title">
-                            <h2>Bạn đã nắm rõ thông tin về virus corona?</h2>
+                            <br>
+                            <h2>Bạn đã hiểu đúng về virus corona?</h2>
                             <p>Hãy kiếm tra hiểu biết của bạn qua bộ câu hỏi sau.</p>
                         </div>
                     </div>
                 </div>
-                <img src="img/cov19.2.jpg" alt="">
+                <div class="slide1">
+                    <div>
+                        <div class="quest">
+                            <br>
+                            <h3>Câu 1: Virus Corona lây lan như thế nào?</h3>
+                        </div>
+                        <br>
+                        <button class="questbtn correct">A. Virus này ban đầu xuất hiện từ nguồn động vật nhưng 
+                            có khả năng lây lan từ người sang người thông qua tiếp xúc với dịch cơ thể của người 
+                            bệnh (chất thải; nước bọt;...)</button>
+                        <br>
+                        <button class="questbtn wrong">A. Virus này ban đầu xuất hiện từ nguồn thực vật, không có 
+                            khả năng lây lan từ người sang người</button>
+                    </div>
+                    <div>
+                        <div class="quest">
+                            <br>
+                            <h3>Câu 2: Các không gian nào có nguy cơ lây nhiễm virus cao hơn?</h3>
+                        </div>
+                        <br>
+                        <button class="questbtn wrong">A. Mọi nơi như nhau.</button>
+                        <br>
+                        <button class="questbtn correct">B. Nơi chật hẹp hoặc tập trung đông người</button>
+                    </div>
+                    <div>
+                        <div class="quest">
+                            <br>
+                            <h3>Câu 3: Tính đến thời điểm hiện tại, đã có thuốc đặc hiệu phòng và điều trị virus Corona mới chưa?</h3>
+                        </div>
+                        <br>
+                        <button class="questbtn wrong">A. Đã có</button>
+                        <br>
+                        <button class="questbtn correct">B. Chưa có</button>
+                    </div>
+                    <div>
+                        <div class="quest">
+                            <br>
+                            <h3>Câu 4: Người khỏe mạnh bình thường ít có nguy cơ lây nhiễm hơn người yếu không?</h3>
+                        </div>
+                        <br>
+                        <button class="questbtn correct">A. Không</button>
+                        <br>
+                        <button class="questbtn wrong">B. Có</button>
+                    </div>
+                    <div>
+                        <div class="quest">
+                            <br>
+                            <h3>Câu 5: Miền nam có ít nguy cơ lây lan dịch hơn miền bắc không?</h3>
+                        </div>
+                        <br>
+                        <button class="questbtn correct">A. A. Chưa có bằng chứng để so sánh</button>
+                        <br>
+                        <button class="questbtn wrong">B. Có</button>
+                    </div>
+                    <div>
+                        <div class="quest">
+                            <br>
+                            <h3>Câu 6: Tiêm vắc xin cúm thường có ngăn ngừa lây nhiễm Virus Corona không?</h3>
+                        </div>
+                        <br>
+                        <button class="questbtn wrong">A. Có hiệu quả</button>
+                        <br>
+                        <button class="questbtn correct">B. Không ngăn ngừa được</button>
+                    </div>
+                    <div>
+                        <div class="quest">
+                            <br>
+                            <h3>Câu 7: Bôi dầu vừng có thể cản trở virus corona xâm nhập cơ thể không?</h3>
+                        </div>
+                        <br>
+                        <button class="questbtn wrong">A. Có</button>
+                        <br>
+                        <button class="questbtn correct">B. Không</button>
+                    </div>
+                    <div>
+                        <div class="quest">
+                            <br>
+                            <h3>Câu 8: Thời gian ủ bệnh của Virus Corona là bao nhiêu ngày?</h3>
+                        </div>
+                        <br>
+                        <button class="questbtn correct">A. Từ 2-12.5 ngày</button>
+                        <br>
+                        <button class="questbtn wrong">B. Từ 5-7 ngày</button>
+                    </div>
+                    <div>
+                        <div class="quest">
+                            <br>
+                            <h3>Câu 9: Sốt cao (trên 40 độ) nhưng không đau họng, đó có phải triệu chứng của virus Corona hay không?</h3>
+                        </div>
+                        <br>
+                        <button class="questbtn wrong">A. Chắc chắn là không</button>
+                        <br>
+                        <button class="questbtn correct">B. Có thể có. Nên đến cơ sở y tế gần nhất để được khám</button>
+                    </div>
+                    <div>
+                        <div class="quest">
+                            <br>
+                            <h3>Câu 10: Theo bạn, khoảng cách an toàn khi ở cạnh người ho, sốt nghi nhiễm Covid-19 là bao nhiêu?</h3>
+                        </div>
+                        <br>
+                        <button class="questbtn correct">A. Ít nhất 2m</button>
+                        <br>
+                        <button class="questbtn wrong">B. Ít nhất 1m</button>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -229,6 +335,7 @@
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/masonry.pkgd.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/test.js"></script>
 </body>
 
 </html>
