--- a/activar/test4.html
+++ b/activar/test4.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/test.css" type="text/css">
 </head>
 
 <body>
@@ -73,15 +74,124 @@
     <section class="aboutus-section spad">
         <div class="container">
             <div class="aboutus-page-text">
-                    <div class="row">
-                        <div class="col-xl-9 col-lg-10 m-auto">
+                <div class="row bg-red">
+                    <div class="col-xl-9 col-lg-10 m-auto">
                         <div class="section-title">
-                            <h2>Bạn có nắm rõ cách phòng virus trong gia đình?</h2>
+                            <br>
+                            <h2>Bạn đã nắm rõ các cách để phòng virus trong gia đình?</h2>
                             <p>Hãy kiếm tra hiểu biết của bạn qua bộ câu hỏi sau.</p>
                         </div>
                     </div>
                 </div>
-                <img src="img/cov19.2.jpg" alt="">
+                <div class="slide1">
+                    <div>
+                        <div class="quest">
+                            <br>
+                            <h3>Câu 1: Trong nhà, cần thực hiện các biện pháp gì để phòng bệnh?</h3>
+                        </div>
+                        <br>
+                        <button class="questbtn wrong">A. Tăng cường sử dụng điều hòa để tăng nhiệt độ trong phòng.</button>
+                        <br>
+                        <button class="questbtn correct">B. Thường xuyên lau nền nhà, tay nắm cửa và bề mặt 
+                            các đồ vật trong nhà bằng các chất tẩy rửa thông thường, như xà phòng và các 
+                            dung dịch khử khuẩn thông thường khác.</button>
+                    </div>
+                    <div>
+                        <div class="quest">
+                            <br>
+                            <h3>Câu 2: Khi đi chợ bán thực phẩm tươi sống, làm thế nào để tránh bị lây nhiễm virus corona?</h3>
+                        </div>
+                        <br>
+                        <button class="questbtn correct">A. Đeo khẩu trang; Dùng bao tay khi chạm tay vào động vật hoặc sản phẩm từ động vật;
+                             Sau đó rửa tay với xà phòng đúng cách; Tránh tiếp xúc với động vật hoang dã.</button>
+                        <br>
+                        <button class="questbtn wrong">B. Chỉ cần tránh miệng, có thẻ chạm tay thoải mái vào mắt, mũi.</button>
+                    </div>
+                    <div>
+                        <div class="quest">
+                            <br>
+                            <h3>Câu 3: Nên ăn những loại thức ăn nào để đảm bảo sức đề kháng?</h3>
+                        </div>
+                        <br>
+                        <button class="questbtn wrong">A. Những thức ăn lạ hoặc thức ăn không rõ nguồn gốc</button>
+                        <br>
+                        <button class="questbtn correct">B. Ăn thức ăn sạch, đảm bảo vệ sinh thực phẩm tối đa</button>
+                    </div>
+                    <div>
+                        <div class="quest">
+                            <br>
+                            <h3>Câu 4: Khi đi chợ, tôi thường hay chọn các loại thịt cá bằng tay và phải tiếp xúc với 
+                                các gian hàng giết mổ động vật, vậy tôi có khả năng bị lây nhiễm hay không?</h3>
+                        </div>
+                        <br>
+                        <button class="questbtn correct">A. Có nguy cơ</button>
+                        <br>
+                        <button class="questbtn wrong">B. Chỉ cần không tiếp xúc tay với mặt, mũi, miệng trong quá trình đi chợ sẽ không có nguy cơ</button>
+                    </div>
+                    <div>
+                        <div class="quest">
+                            <br>
+                            <h3>Câu 5: Nên ăn những loại rau quả nào để tăng cường sức đề kháng?</h3>
+                        </div>
+                        <br>
+                        <button class="questbtn correct">A. Kiwi, cam, đu đủ súp lơ xanh, cải xanh,...</button>
+                        <br>
+                        <button class="questbtn wrong">B. Chỉ cần uống vitamin C dạng viên là đủ</button>
+                    </div>
+                    <div>
+                        <div class="quest">
+                            <br>
+                            <h3>Câu 6: Uống nước cam hay nhiều vitamin C có giúp tránh được Corona không?</h3>
+                        </div>
+                        <br>
+                        <button class="questbtn correct">A. Không</button>
+                        <br>
+                        <button class="questbtn wrong">B. Có</button>
+                    </div>
+                    <div>
+                        <div class="quest">
+                            <br>
+                            <h3>Câu 7: Các hàng quán ăn vặt vỉa hè có là nguy cơ lây nhiễm virus Covid-19 
+                                không khi dịch bệnh này được cho là có thể lây lan qua đường tiêu hóa?</h3>
+                        </div>
+                        <br>
+                        <button class="questbtn wrong">A. Có nguy cơ</button>
+                        <br>
+                        <button class="questbtn correct">B. Không</button>
+                    </div>
+                    <div>
+                        <div class="quest">
+                            <br>
+                            <h3>Câu 8: Có nên tiếp tục mở máy lạnh (điều hòa không khí) trong nhà vào thời điểm đang có dịch?</h3>
+                        </div>
+                        <br>
+                        <button class="questbtn correct">A. Hạn chế mở điều hòa</button>
+                        <br>
+                        <button class="questbtn wrong">B. Mở điều hòa bình thường</button>
+                    </div>
+                    <div>
+                        <div class="quest">
+                            <br>
+                            <h3>Câu 9: Nếu gia đình hoặc người thân có các dấu hiệu ho, sốt, khó thở... cần làm gì?</h3>
+                        </div>
+                        <br>
+                        <button class="questbtn wrong">A. Tiếp tục đi lại, du lịch như bình thường</button>
+                        <br>
+                        <button class="questbtn correct">C. Ngay lập tức đeo khẩu trang, tự cách ly và đến 
+                            khám bác sĩ tại phòng khám truyền nhiễm nếu có triệu chứng nghi ngờ</button>
+                    </div>
+                    <div>
+                        <div class="quest">
+                            <br>
+                            <h3>Câu 10: Nếu bản thân hoặc người nhà có triệu chứng ho, nhưng sau 5 ngày không thấy sốt,
+                                có nghĩa là không bị nhiễm virus đúng không?</h3>
+                        </div>
+                        <br>
+                        <button class="questbtn correct">A. Vẫn nên đi khám, xét nghiệm để kiểm tra</button>
+                        <br>
+                        <button class="questbtn wrong">B. Chắc chắn là an toàn</button>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -229,6 +339,7 @@
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/masonry.pkgd.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/test.js"></script>
 </body>
 
 </html>
