fix lai 1 sô chô

--- a/activar/about-us.html
+++ b/activar/about-us.html
@@ -195,7 +195,7 @@
                         <div class="ti-pic">
                             <img src="img/test1.png" alt="">
                             <a href="test1.html">
-                                <button class="btn">Rửa tay đúng cách</button>
+                                <button class="btn"><h3>Rửa, vệ sinh tay đúng cách</h3></button>
                             </a>
                         </div>
                     </div>
@@ -205,7 +205,7 @@
                         <div class="ti-pic">
                             <img src="img/test2.png" alt="">
                             <a href="test2.html">
-                                <button class="btn">Đeo khẩu trang đúng cách</button>
+                                <button class="btn"><h3>Đeo khẩu trang đúng cách</h3></button>
                             </a>    
                         </div>
                     </div>
@@ -215,7 +215,7 @@
                         <div class="ti-pic">
                             <img src="img/test3.png" alt="">
                             <a href="test3.html">
-                                <button class="btn">Bạn đã hiểu đúng về virus corana?</button>
+                                <button class="btn"><h3>Hiểu đúng về virus corana</h3></button>
                             </a>                            
                         </div>
                     </div>
@@ -225,7 +225,7 @@
                         <div class="ti-pic">
                             <img src="img/test4.png" alt="">
                             <a href="test4.html">
-                                <button class="btn">Phòng virus trong gia đình</button>
+                                <button class="btn"><h3>Phòng virus trong gia đình</h3></button>
                             </a>
                         </div>
                     </div>
