--- a/activar/test4.html
+++ b/activar/test4.html
@@ -120,8 +120,8 @@
                     <div>
                         <div class="quest">
                             <br>
-                            <h3>Câu 4: Khi đi chợ, tôi thường hay chọn các loại thịt cá bằng tay và phải tiếp xúc với 
-                                các gian hàng giết mổ động vật, vậy tôi có khả năng bị lây nhiễm hay không?</h3>
+                            <h3>Câu 4: Có khả năng bị lây nhiễm khi phải tiếp xúc với 
+                                các gian hàng giết mổ động vật?</h3>
                         </div>
                         <br>
                         <button class="questbtn correct">A. Có nguy cơ</button>
@@ -151,8 +151,8 @@
                     <div>
                         <div class="quest">
                             <br>
-                            <h3>Câu 7: Các hàng quán ăn vặt vỉa hè có là nguy cơ lây nhiễm virus Covid-19 
-                                không khi dịch bệnh này được cho là có thể lây lan qua đường tiêu hóa?</h3>
+                            <h3>Câu 7: Các quán ăn vặt vỉa hè có nguy cơ lây nhiễm virus Covid-19 
+                                không khi được cho là virus có thể lây qua đường tiêu hóa?</h3>
                         </div>
                         <br>
                         <button class="questbtn wrong">A. Có nguy cơ</button>
@@ -183,7 +183,7 @@
                     <div>
                         <div class="quest">
                             <br>
-                            <h3>Câu 10: Nếu bản thân hoặc người nhà có triệu chứng ho, nhưng sau 5 ngày không thấy sốt,
+                            <h3>Câu 10: Nếu bản thân có triệu chứng ho, nhưng sau 5 ngày không thấy sốt,
                                 có nghĩa là không bị nhiễm virus đúng không?</h3>
                         </div>
                         <br>
@@ -203,8 +203,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <h2>Others SC2 Quest</h2>
-                        <p>Một số bài test khác có liên quan.</p>
+                        <h2>SC2 Quest</h2>
+                        <p>Bạn đã đủ hiểu về dịch bệnh NCoV? hãy cùng kiếm tra qua các bài test của chúng tôi</p>
                     </div>
                 </div>
             </div>
@@ -214,7 +214,7 @@
                         <div class="ti-pic">
                             <img src="img/test1.png" alt="">
                             <a href="test1.html">
-                                <button class="btn">Rửa tay đúng cách</button>
+                                <button class="btn"><h3>Rửa, vệ sinh tay đúng cách</h3></button>
                             </a>
                         </div>
                     </div>
@@ -224,7 +224,7 @@
                         <div class="ti-pic">
                             <img src="img/test2.png" alt="">
                             <a href="test2.html">
-                                <button class="btn">Đeo khẩu trang đúng cách</button>
+                                <button class="btn"><h3>Đeo khẩu trang đúng cách</h3></button>
                             </a>    
                         </div>
                     </div>
@@ -234,7 +234,7 @@
                         <div class="ti-pic">
                             <img src="img/test3.png" alt="">
                             <a href="test3.html">
-                                <button class="btn">Bạn đã hiểu đúng về virus corana?</button>
+                                <button class="btn"><h3>Hiểu đúng về virus corana</h3></button>
                             </a>                            
                         </div>
                     </div>
@@ -244,7 +244,7 @@
                         <div class="ti-pic">
                             <img src="img/test4.png" alt="">
                             <a href="test4.html">
-                                <button class="btn">Phòng virus trong gia đình</button>
+                                <button class="btn"><h3>Phòng virus trong gia đình</h3></button>
                             </a>
                         </div>
                     </div>
