--- a/activar/test2.html
+++ b/activar/test2.html
@@ -202,8 +202,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <h2>Others SC2 Quest</h2>
-                        <p>Một số bài test khác có liên quan.</p>
+                        <h2>SC2 Quest</h2>
+                        <p>Bạn đã đủ hiểu về dịch bệnh NCoV? hãy cùng kiếm tra qua các bài test của chúng tôi</p>
                     </div>
                 </div>
             </div>
@@ -213,7 +213,7 @@
                         <div class="ti-pic">
                             <img src="img/test1.png" alt="">
                             <a href="test1.html">
-                                <button class="btn">Rửa tay đúng cách</button>
+                                <button class="btn"><h3>Rửa, vệ sinh tay đúng cách</h3></button>
                             </a>
                         </div>
                     </div>
@@ -223,7 +223,7 @@
                         <div class="ti-pic">
                             <img src="img/test2.png" alt="">
                             <a href="test2.html">
-                                <button class="btn">Đeo khẩu trang đúng cách</button>
+                                <button class="btn"><h3>Đeo khẩu trang đúng cách</h3></button>
                             </a>    
                         </div>
                     </div>
@@ -233,7 +233,7 @@
                         <div class="ti-pic">
                             <img src="img/test3.png" alt="">
                             <a href="test3.html">
-                                <button class="btn">Bạn đã hiểu đúng về virus corana?</button>
+                                <button class="btn"><h3>Hiểu đúng về virus corana</h3></button>
                             </a>                            
                         </div>
                     </div>
@@ -243,7 +243,7 @@
                         <div class="ti-pic">
                             <img src="img/test4.png" alt="">
                             <a href="test4.html">
-                                <button class="btn">Phòng virus trong gia đình</button>
+                                <button class="btn"><h3>Phòng virus trong gia đình</h3></button>
                             </a>
                         </div>
                     </div>
