--- a/activar/about-us.html
+++ b/activar/about-us.html
@@ -86,7 +86,7 @@
         </div>
     </section>
     <!-- Breadcrumb End -->
-
+    <iframe src="https://corona.kompa.ai/" width="100%" height="100%" style="border:none;"></iframe>
     <!-- Aboutus Section Begin -->
     <section class="aboutus-section spad">
         <div class="container">
