--- a/activar/about-us.html
+++ b/activar/about-us.html
@@ -70,7 +70,7 @@
     <!-- Header End -->
 
     <!-- Breadcrumb Section Begin -->
-    <section class="breadcrumb-section set-bg spad" data-setbg="img/cov19.1.jpg">
+    <!-- <section class="breadcrumb-section set-bg spad" data-setbg="img/cov19.1.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -84,7 +84,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Breadcrumb End -->
     <iframe src="https://corona.kompa.ai/" width="100%" height="100%" style="border:none;"></iframe>
     <!-- Aboutus Section Begin -->
