anh chuyen dong

--- a/activar/index.html
+++ b/activar/index.html
@@ -116,7 +116,7 @@
     <!-- Hero End -->
 <div id="Corona_prevent_video_container">
     
-      <iframe class="video_child" src='https://www.vlive.tv/embed/180468?autoPlay=true' frameborder='no' scrolling='no' marginwidth='0' marginheight='0' allowfullscreen></iframe>
+      <iframe class="video_child" src='https://www.vlive.tv/embed/180468?autoPlay=true' frameborder='100' scrolling='no' marginwidth='0' marginheight='0' allowfullscreen></iframe>
       <iframe class="video_child" src='https://www.vlive.tv/embed/180320?autoPlay=true' frameborder='no' scrolling='no' marginwidth='0' marginheight='0'  allowfullscreen></iframe>
       <iframe class="video_child" src='https://www.vlive.tv/embed/180803?autoPlay=true' frameborder='no' scrolling='no' marginwidth='0' marginheight='0'  allowfullscreen></iframe>
 </div>
