--- a/activar/schedule.html
+++ b/activar/schedule.html
@@ -50,10 +50,10 @@
                     <nav class="mainmenu mobile-menu">
                         <ul>
                             <li><a href="./index.html">Home</a></li>
-                            <li><a href="./about-us.html">About us</a></li>
-                            <li class="active"><a href="./schedule.html">Schedule</a></li>
-                            <li><a href="./gallery.html">Gallery</a></li>
-                            <li><a href="./blog.html">Blog</a>
+                            <li><a href="./about-us.html">Thông tin</a></li>
+                            <li class="active"><a href="./schedule.html">Triệu chứng</a></li>
+                            <li><a href="./gallery.html">Phòng chống</a></li>
+                            <li><a href="./blog.html">Liên hệ</a>
                                 <ul class="dropdown">
                                     <li><a href="./about-us.html">About Us</a></li>
                                     <li><a href="./blog-single.html">Blog Details</a></li>
