--- a/activar/phòng chống.html
+++ b/activar/phòng chống.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Activitar, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Activitar | Template</title>
+    <title>Phòng Chống</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700,800,900&display=swap" rel="stylesheet">
@@ -49,11 +49,11 @@
                 <div class="nav-menu">
                     <nav class="mainmenu mobile-menu">
                         <ul>
-                            <li><a href="./index.html">Home</a></li>
-                            <li><a href="./about-us.html">About us</a></li>
-                            <li><a href="./schedule.html">Schedule</a></li>
-                            <li class="active"><a href="./gallery.html">Gallery</a></li>
-                            <li><a href="./blog.html">Blog</a>
+                            <li class="active"><a href="./home.html">Home</a></li>
+                            <li><a href="./thông tin.html">Thông tin</a></li>
+                            <li><a href="./triệu chứng.html">Triệu chứng</a></li>
+                            <li><a href="./phòng chống.html">Phòng chống</a></li>
+                            <li><a href="./blog.html">Liên hệ</a>
                                 <ul class="dropdown">
                                     <li><a href="./about-us.html">About Us</a></li>
                                     <li><a href="./blog-single.html">Blog Details</a></li>
@@ -70,17 +70,11 @@
     <!-- Header End -->
 
     <!-- Breadcrumb Section Begin -->
-    <section class="breadcrumb-section set-bg spad" data-setbg="img/about-bread.jpg">
+    <section class="breadcrumb-section set-bg spad" data-setbg="img/phòng0.png">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="breadcrumb-text">
-                        <h2>Our Gallery</h2>
-                        <div class="breadcrumb-controls">
-                            <a href="#"><i class="fa fa-home"></i> Home</a>
-                            <span>Gallery</span>
-                        </div>
-                    </div>
+                    <br><br><br><br><br><br><br>
                 </div>
             </div>
         </div>
@@ -94,10 +88,10 @@
                 <div class="col-lg-12">
                     <div class="gallery-controls">
                         <ul>
-                            <li class="active" data-filter="*">All GALLERY</li>
-                            <li data-filter=".crossfit">Crossfit</li>
-                            <li data-filter=".workout">Workout</li>
-                            <li data-filter=".gym">GYM</li>
+                            <li class="active" data-filter="*">Tất cả ảnh</li>
+                            <li data-filter=".crossfit">Rửa tay</li>
+                            <li data-filter=".workout">Đeo khẩu trang</li>
+                            <li data-filter=".gym">Phòng dịch</li>
                         </ul>
                     </div>
                 </div>
@@ -105,113 +99,113 @@
             <div class="row gallery-filter">
                 <div class="col-lg-4 col-sm-6 mix crossfit workout">
                     <div class="gallery-item">
-                        <img src="img/gallery/gallery-1.jpg"" alt="">
+                        <img src="img/prevent/Phòng1.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/gallery/gallery-1.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent/Phòng1.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
-                                <h6>Time to Try a Bodyweight Workout <span>Run, Walk, Swimming</span></h6>
+                                <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mix workout gym">
                     <div class="gallery-item">
-                        <img src="img/gallery/gallery-2.jpg"" alt="">
+                        <img src="img/prevent/Phòng2.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/gallery/gallery-2.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent/Phòng2.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
-                                <h6>Time to Try a Bodyweight Workout <span>Run, Walk, Swimming</span></h6>
+                                <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mix workout">
                     <div class="gallery-item">
-                        <img src="img/gallery/gallery-3.jpg"" alt="">
+                        <img src="img/prevent/Phòng3.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/gallery/gallery-3.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent/Phòng3.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
-                                <h6>Time to Try a Bodyweight Workout <span>Run, Walk, Swimming</span></h6>
+                                <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mix gym">
                     <div class="gallery-item">
-                        <img src="img/gallery/gallery-4.jpg"" alt="">
+                        <img src="img/prevent/Phòng4.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/gallery/gallery-4.jpg" class="image-popup"><i
+                                <a href="img/prevent/Phòng4.jpg" class="image-popup"><i
                                         class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
-                                <h6>Time to Try a Bodyweight Workout <span>Run, Walk, Swimming</span></h6>
+                                <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mix crossfit">
                     <div class="gallery-item">
-                        <img src="img/gallery/gallery-5.jpg"" alt="">
+                        <img src="img/prevent/Phòng5.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/gallery/gallery-5.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
+                                <a href="img/prevent/Phòng5.jpg" class="image-popup"><i class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
-                                <h6>Time to Try a Bodyweight Workout <span>Run, Walk, Swimming</span></h6>
+                                <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mix gym crossfit">
                     <div class="gallery-item">
-                        <img src="img/gallery/gallery-6.jpg"" alt="">
+                        <img src="img/gallery/gallery-6.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
                                 <a href="img/gallery/gallery-6.jpg" class="image-popup"><i
                                         class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
-                                <h6>Time to Try a Bodyweight Workout <span>Run, Walk, Swimming</span></h6>
+                                <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mix workout">
                     <div class="gallery-item">
-                        <img src="img/gallery/gallery-7.jpg"" alt="">
+                        <img src="img/gallery/gallery-7.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
                                 <a href="img/gallery/gallery-7.jpg" class="image-popup"><i
                                         class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
-                                <h6>Time to Try a Bodyweight Workout <span>Run, Walk, Swimming</span></h6>
+                                <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mix crossfit gym">
                     <div class="gallery-item">
-                        <img src="img/gallery/gallery-8.jpg"" alt="">
+                        <img src="img/gallery/gallery-8.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
                                 <a href="img/gallery/gallery-8.jpg" class="image-popup"><i
                                         class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
-                                <h6>Time to Try a Bodyweight Workout <span>Run, Walk, Swimming</span></h6>
+                                <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mix crossfit gym workout">
                     <div class="gallery-item">
-                        <img src="img/gallery/gallery-9.jpg"" alt="">
+                        <img src="img/gallery/gallery-9.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
                                 <a href="img/gallery/gallery-9.jpg" class="image-popup"><i
                                         class="fa fa-search-plus"></i></a>
                                 <a href="#"><i class="fa fa-chain"></i></a>
-                                <h6>Time to Try a Bodyweight Workout <span>Run, Walk, Swimming</span></h6>
+                                <h6>Cách phòng chống virus SARS-CoV-2 <span>Rửa tay, Đeo khẩu trang, Vệ sinh</span></h6>
                             </div>
                         </div>
                     </div>
@@ -221,22 +215,6 @@
     </section>
     <!-- Gallery Section End -->
 
-    <!-- Cta Section Begin -->
-    <section class="cta-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="cta-text">
-                        <h3>GeT Started Today</h3>
-                        <p>New student special! $30 unlimited Gym for the first week anh 50% of our member!</p>
-                    </div>
-                    <a href="#" class="primary-btn cta-btn">book now</a>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Cta Section End -->
-
     <!-- Footer Section Begin -->
     <footer class="footer-section">
         <div class="container">
@@ -244,18 +222,11 @@
                 <div class="col-lg-3">
                     <div class="footer-logo-item">
                         <div class="f-logo">
-                            <a href="#"><img src="img/logo.png" alt=""></a>
+                            <a href="#"><img src="img/LOGO-MINDX.png" alt=""></a>
                         </div>
-                        <p>Despite growth of the Internet over the past seven years, the use of toll-free phone numbers
-                            in television advertising continues.</p>
-                        <div class="social-links">
-                            <h6>Follow us</h6>
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-google-plus"></i></a>
-                            <a href="#"><i class="fa fa-linkedin"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
-                        </div>
+                        <p>Chúng tôi xin cam kết sẽ đem lại những thông tin chính xác nhất
+                            và được cập nhật liên tục về dịch bệnh SARS-COV-2 trên Việt Nam và toàn thế giới.
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-3 offset-lg-1">
@@ -295,34 +266,25 @@
                         <ul class="footer-info">
                             <li>
                                 <i class="fa fa-phone"></i>
-                                <span>Phone:</span>
-                                (12) 345 6789
+                                <span>SĐT đường dây nóng:</span>
+                                0353 005 670
                             </li>
                             <li>
                                 <i class="fa fa-envelope-o"></i>
                                 <span>Email:</span>
-                                Colorlib.info@gmail.com
+                                contact.hoangdaothuy@mindx.edu.vn
                             </li>
                             <li>
                                 <i class="fa fa-map-marker"></i>
-                                <span>Address</span>
-                                Iris Watson, Box 283 8562, NY
+                                <span>Địa chỉ</span>
+                                29 T1 Hoàng Đạo Thúy
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="copyright-text">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 text-center">
-                        <div class="ct-inside"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </div>
-                    </div>
-                </div>
-            </div>
+        
         </div>
     </footer>
     <!-- Footer Section End -->
