--- a/activar/triệu chứng.html
+++ b/activar/triệu chứng.html
@@ -49,11 +49,11 @@
                 <div class="nav-menu">
                     <nav class="mainmenu mobile-menu">
                         <ul>
-                            <li><a href="./index.html">Home</a></li>
-                            <li><a href="./about-us.html">About us</a></li>
-                            <li class="active"><a href="./schedule.html">Schedule</a></li>
-                            <li><a href="./gallery.html">Gallery</a></li>
-                            <li><a href="./blog.html">Blog</a>
+                            <li class="active"><a href="./home.html">Home</a></li>
+                            <li><a href="./thông tin.html">Thông tin</a></li>
+                            <li><a href="./triệu chứng.html">Triệu chứng</a></li>
+                            <li><a href="./phòng chống.html">Phòng chống</a></li>
+                            <li><a href="./blog.html">Liên hệ</a>
                                 <ul class="dropdown">
                                     <li><a href="./about-us.html">About Us</a></li>
                                     <li><a href="./blog-single.html">Blog Details</a></li>
