--- a/activar/test4.html
+++ b/activar/test4.html
@@ -50,10 +50,10 @@
                 <div class="nav-menu">
                     <nav class="mainmenu mobile-menu">
                         <ul>
-                            <li><a href="./index.html">Home</a></li>
-                            <li class="active"><a href="./about-us.html">Thông tin</a></li>
-                            <li><a href="./schedule.html">Triệu chứng</a></li>
-                            <li><a href="./gallery.html">Phòng chống</a></li>
+                            <li class="active"><a href="./home.html">Home</a></li>
+                            <li><a href="./thông tin.html">Thông tin</a></li>
+                            <li><a href="./triệu chứng.html">Triệu chứng</a></li>
+                            <li><a href="./phòng chống.html">Phòng chống</a></li>
                             <li><a href="./blog.html">Liên hệ</a>
                                 <ul class="dropdown">
                                     <li><a href="./about-us.html">About Us</a></li>
